# studyresearcg01

./: README.md  our_model_research.md
generalized_orders_of_magnitude-main/: README.md  compare_gooms_to_floats.py  replicate_experiment_one_from_paper.py  setup.py
generalized_orders_of_magnitude-main/generalized_orders_of_magnitude/: __init__.py  generalized_orders_of_magnitude.py
goom_jax-main/: LICENSE  README.md  pyproject.toml
goom_jax-main/demo_nbs/: colab.ipynb  test_runner_and_lle.ipynb
goom_jax-main/src/goom/: __main__.py  config.py  goom.py  lle.py  lmme.py  operations.py
goom_jax-main/tests/: test_gooms.py  test_lmme.py  test_operations.py
goom_ssm_rnn-main/: LICENSE  README.md  goom_ssm_rnn.py  requirements.txt
